added the video call opt

--- a/navbar.html
+++ b/navbar.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="title"><img src="EduSphere.png" alt="";></div>
+        <div class="title">EDUSPHERE</div>
         <div class="menu-toggle">☰</div>
         <ul>
             <a href="landing.html"><li>Home</li></a>
