updated landing page

--- a/sign.html
+++ b/sign.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EduSphere</title>
+    <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="sign.css">
 </head>
 <body>
-
+   
     <div id="popup"></div>
 
     <div id="wrapper">
@@ -38,7 +39,6 @@
                     <div>
                         <label>Password</label>
                         <input type="password" id="signup-password" class="text-input" placeholder="Enter password">
-                        
                     </div>
                     <button type="submit" class="primary-btn">Sign Up</button>
                 </form>
@@ -58,5 +58,6 @@
     </div>
 
     <script src="sign.js"></script>
+    <script src="navbar.js"></script>
 </body>
 </html>
