--- a/landing.html
+++ b/landing.html
@@ -6,24 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EduSphere</title>
     <link rel="stylesheet" href="landing.css">
-    <link rel="stylesheet" href="navbar.css">
+    <!-- <link rel="stylesheet" href="navbar.css"> -->
     <link rel="stylesheet" href="footer.css">
 </head>
 
 <body>
     <nav class="navbar">
         <div class="title">EDUSPHERE</div>
-        <div class="menu-toggle">☰</div>
-        <ul>
+         <div class="menu-toggle" id="menu-toggle">☰</div>
+        <ul id="nav-auth" class="nav-menu">
             <a href="landing.html"><li>Home</li></a>
             <a href="groupPage.html"><li>Group Study</li></a>
             <a href="library.html"><li>Library</li></a>
             <a href="quiz.html"><li>Quiz</li></a>
             <a href="feedback.html"><li>Contact Us</li></a>
-            <a href="sign.html">
-                <li><button class="login-btn">Login</button></li>
-            </a>
+            <a href="sign.html" id="auth-link"><li><button class="login-btn">Login</button></li></a>
         </ul>
+        
+        
     </nav>
     <div class="hero">
         <div class="container">
@@ -258,7 +258,7 @@
     </script>
 
     <script src="landing.js"></script>
-    <script src="navbar.js"></script>
+    <!-- <script src="navbar.js"></script> -->
     <script src="footer.js"></script>
 </body>
 
