--- a/navbar.html
+++ b/navbar.html
@@ -16,7 +16,7 @@
             <a href="library.html"><li>Library</li></a>
             <a href="quiz.html"><li>Quiz</li></a>
             <a href="feedback.html"><li>Contact Us</li></a>
-            <a href="sign.html"><li><button class="login-btn">Login</button></li></a>
+            <!-- <a href="sign.html"><li><button class="login-btn">Login</button></li></a> -->
         </ul>
     </nav>
 
