--- a/quiz.html
+++ b/quiz.html
@@ -17,9 +17,9 @@
             <a href="library.html"><li>Library</li></a>
             <a href="quiz.html"><li>Quiz</li></a>
             <a href="feedback.html"><li>Contact Us</li></a>
-            <a href="sign.html">
+            <!-- <a href="sign.html">
                 <li><button class="login-btn">Login</button></li>
-            </a>
+            </a> -->
         </ul>
     </nav>
     <div class="main">
