--- a/video-call-app/public/video-call.html
+++ b/video-call-app/public/video-call.html
@@ -11,14 +11,14 @@
             font-family: 'Arial', sans-serif;
             background-color: #f0f2f5;
             margin: 0;
-            padding: 20px;
+            padding: 0px;
             display: flex;
             flex-direction: column;
             align-items: center;
         }
 
         h1 {
-            color: #00FF66;
+            color: black;
             margin-bottom: 20px;
         }
 
@@ -43,14 +43,14 @@
         }
 
         button {
-            background-color: #1877f2;
+            background-color: #37ae67;
             color: white;
             cursor: pointer;
             transition: background-color 0.3s;
         }
 
         button:hover {
-            background-color: #166fe5;
+            background-color: #1b5e20;
         }
 
         input {
@@ -59,7 +59,7 @@
 
         .video-container {
             display: flex;
-            gap: 20px;
+            gap: 33px;
             flex-wrap: wrap;
             justify-content: center;
         }
@@ -69,6 +69,15 @@
             border-radius: 8px;
             overflow: hidden;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .main-container {
+            background-color: white;
+            width: 70%;
+            padding: 24px;
+            border-radius: 24px;
+            padding-bottom: 44px;
+            margin-top: 25px;
         }
 
         video {
@@ -107,12 +116,14 @@
             background-color: #c5e1a5;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             position: relative;
+            width: 100%;
         }
 
         .navbar .title {
             font-size: 24px;
             font-weight: bold;
             color: #2e7d32;
+            margin-left: 35px;
         }
 
         .navbar ul {
@@ -122,6 +133,7 @@
             gap: 63px;
             padding: 0;
             margin: 0;
+            margin-right: 38px;
         }
 
         .navbar ul li {
@@ -213,9 +225,6 @@
             <a href="feedback.html">
                 <li>Contact Us</li>
             </a>
-            <a href="sign.html">
-                <li><button class="login-btn">Login</button></li>
-            </a>
         </ul>
     </nav>
     <h1>Real-Time Video Calling</h1>
@@ -228,17 +237,21 @@
         <button id="joinCall">Join Call</button>
     </div>
 
-    <div class="video-container">
-        <div class="video-wrapper">
-            <h2>Your Video</h2>
-            <video id="myVideo" autoplay muted></video>
-        </div>
+    <div class="main-container">
+        <div class="video-container">
+            <div class="video-wrapper">
+                <h2>Your Video</h2>
+                <video id="myVideo" autoplay muted></video>
+            </div>
 
-        <div class="video-wrapper">
-            <h2>Other Participant</h2>
-            <video id="peerVideo" autoplay></video>
+            <div class="video-wrapper">
+                <h2>Other Participant</h2>
+                <video id="peerVideo" autoplay></video>
+            </div>
         </div>
     </div>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
     <script>
