--- a/aboutus.html
+++ b/aboutus.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="aboutus.js" defer></script>
 </head>
+<iframe src="chat.html" width="330" height="500" style="border:none; position:fixed; bottom:20px; right:20px; ; border-radius:10px;"></iframe>
+
 <body>
     <header>
         <button class="theme-toggle" onclick="toggleTheme()">
