--- a/groupPage.html
+++ b/groupPage.html
@@ -243,6 +243,8 @@
         }
     </style>
 </head>
+<iframe src="chat.html" width="330" height="500" style="border:none; position:fixed; bottom:20px; right:20px; ; border-radius:10px;"></iframe>
+
 <body>
     <div class="sidebar">
         <h2>🌿 EduSphere</h2>
