--- a/landing.html
+++ b/landing.html
@@ -9,6 +9,7 @@
     <!-- <link rel="stylesheet" href="navbar.css"> -->
     <link rel="stylesheet" href="footer.css">
 </head>
+<iframe src="chat.html" width="330" height="500" style="border:none; position:fixed; bottom:20px; right:20px; ; border-radius:10px;"></iframe>
 
 <body>
     <nav class="navbar">
