--- a/library.html
+++ b/library.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="navbar.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
+<iframe src="chat.html" width="330" height="500" style="border:none; position:fixed; bottom:20px; right:20px; ; border-radius:10px;"></iframe>
 
 <body>
 
