--- a/quiz.html
+++ b/quiz.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="quiz.css">
     <link rel="stylesheet" href="navbar.css">
 </head>
+<iframe src="chat.html" width="330" height="500" style="border:none; position:fixed; bottom:20px; right:20px; ; border-radius:10px;"></iframe>
+
 <body>
     <nav class="navbar">
         <div class="title">EDUSPHERE</div>
