--- a/sign.html
+++ b/sign.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="sign.css">
 </head>
+<iframe src="chat.html" width="330" height="500" style="border:none; position:fixed; bottom:20px; right:20px; ; border-radius:10px;"></iframe>
+
 <body>
    
     <div id="popup"></div>
