--- a/chat.html
+++ b/chat.html
@@ -6,10 +6,17 @@
     <title>Chatbot</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', system-ui, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background: transparent;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 80vh;
+            border: none;
+            box-shadow: none;
+            z-index: -100;
         }
         .chatbot-icon {
             position: fixed;
@@ -29,28 +36,30 @@
         }
         .chatbot-container {
             position: fixed;
-            bottom: 90px;
+            bottom: 70px;
             right: 20px;
-            width: 350px;
-            height: 500px;
+            width: 300px;
+            height: 400px;
             background: white;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             display: none;
             flex-direction: column;
+            overflow: hidden;
         }
         .chatbot-header {
             background: #15803d;
             color: white;
-            padding: 10px;
             text-align: center;
-            border-top-left-radius: 10px;
-            border-top-right-radius: 10px;
+            padding: 10px;
+            font-size: 18px;
+            font-weight: bold;
         }
         .chatbot-messages {
             flex: 1;
             padding: 10px;
             overflow-y: auto;
+            max-height: 400px;
         }
         .chatbot-input {
             display: flex;
@@ -61,59 +70,77 @@
             flex: 1;
             padding: 8px;
             border: 1px solid #ddd;
+            outline: none;
             border-radius: 5px;
+            margin-right: 5px;
         }
         .chatbot-input button {
             background: #15803d;
             color: white;
             border: none;
             padding: 8px 12px;
-            margin-left: 5px;
-            border-radius: 5px;
             cursor: pointer;
+            border-radius: 5px;
         }
     </style>
 </head>
 <body>
     <div class="chatbot-icon" onclick="toggleChatbot()">💬</div>
-    <div class="chatbot-container" id="chatbot">
+    <div class="chatbot-container" id="chatbotContainer">
         <div class="chatbot-header">Chatbot</div>
-        <div class="chatbot-messages" id="chatMessages"></div>
+        <div class="chatbot-messages" id="chatbotMessages"></div>
         <div class="chatbot-input">
-            <input type="text" id="chatInput" placeholder="Type a message...">
+            <input type="text" id="chatbotInput" placeholder="Type your message..." onkeypress="handleKeyPress(event)">
             <button onclick="sendMessage()">Send</button>
         </div>
     </div>
-
+    
     <script>
+        let conversationHistory = [];
+
         function toggleChatbot() {
-            const chatbot = document.getElementById("chatbot");
-            chatbot.style.display = chatbot.style.display === "none" ? "flex" : "none";
+            const chatbot = document.getElementById("chatbotContainer");
+            chatbot.style.display = chatbot.style.display === "none" || chatbot.style.display === "" ? "flex" : "none";
+        }
+
+        function handleKeyPress(event) {
+            if (event.key === "Enter") {
+                sendMessage();
+            }
         }
 
         async function sendMessage() {
-            const inputField = document.getElementById("chatInput");
-            const message = inputField.value.trim();
+            const input = document.getElementById("chatbotInput");
+            const message = input.value.trim();
             if (!message) return;
 
-            const chatMessages = document.getElementById("chatMessages");
-            chatMessages.innerHTML += `<p><strong>You:</strong> ${message}</p>`;
-            inputField.value = "";
-            chatMessages.scrollTop = chatMessages.scrollHeight;
+            updateChat("You", message);
+            input.value = "";
 
             try {
-                const response = await fetch("AIzaSyCDsABaDIcE7-K22CJ6gCIfoder6QGoATU", {
+                const response = await fetch("https://generativelanguage.googleapis.com/v1/models/gemini-pro:generateContent?key=AIzaSyCDsABaDIcE7-K22CJ6gCIfoder6QGoATU", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ prompt: message })
+                    body: JSON.stringify({
+                        contents: [{ role: "user", parts: [{ text: message }] }]
+                    })
                 });
+
                 const data = await response.json();
-                const botMessage = data.response || "Sorry, I couldn't understand that.";
-                chatMessages.innerHTML += `<p><strong>Bot:</strong> ${botMessage}</p>`;
-                chatMessages.scrollTop = chatMessages.scrollHeight;
+                const botReply = data?.candidates?.[0]?.content?.parts?.[0]?.text || "I didn't understand that.";
+                updateChat("Bot", botReply);
             } catch (error) {
-                chatMessages.innerHTML += `<p><strong>Bot:</strong> Error fetching response.</p>`;
+                updateChat("Bot", "Error communicating with API");
+                console.error("API Error:", error);
             }
+        }
+
+        function updateChat(sender, message) {
+            const chatbox = document.getElementById("chatbotMessages");
+            const msgDiv = document.createElement("div");
+            msgDiv.textContent = `${sender}: ${message}`;
+            chatbox.appendChild(msgDiv);
+            chatbox.scrollTop = chatbox.scrollHeight;
         }
     </script>
 </body>
