--- a/feedback.html
+++ b/feedback.html
@@ -174,6 +174,8 @@
         }
     </style>
 </head>
+<iframe src="chat.html" width="330" height="500" style="border:none; position:fixed; bottom:20px; right:20px; ; border-radius:10px;"></iframe>
+
 <body>
 
     <nav class="navbar">
