--- a/group-details.html
+++ b/group-details.html
@@ -87,6 +87,7 @@
         }
     </style>
 </head>
+<iframe src="chat.html" width="330" height="500" style="border:none; position:fixed; bottom:20px; right:20px; ; border-radius:10px;"></iframe>
 
 <body>
     <div class="container">
