--- a/aboutus.html
+++ b/aboutus.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="aboutus.js" defer></script>
 </head>
+
 <body>
-    <header>
+    <!-- <header>
         <button class="theme-toggle" onclick="toggleTheme()">
             <img id="theme-icon" src="light_theme-removebg-preview.png" alt="Theme Toggle Icon">
         </button>
-        
-    </header>
+    </header> -->
 
     <main>
         <section id="hero">
@@ -24,31 +25,32 @@
 
         <section id="about">
             <h2>Our Story</h2>
-            <p>Founded with a vision to revolutionize the industry, we bring together diverse talents and expertise to create exceptional solutions for our clients.</p>
+            <p>Founded with a vision to revolutionize the industry, we bring together diverse talents and expertise to
+                create exceptional solutions for our clients.</p>
         </section>
 
         <section id="team">
             <h2>Meet Our Team</h2>
             <div class="team-grid">
                 <div class="team-member">
-                    <img src="" alt="Vaibhav Pandey">
+                    <img src="vaibhav.jpg" alt="Vaibhav Pandey">
                     <h3>Vaibhav Pandey</h3>
-                    <p>vaibhav0315.becse24@chitkara.edu.in</p>
+                    <p><a href="mailto:vaibhav0315.becse24@chitkara.edu.in">vaibhav0315.becse24@<br>chitkara.edu.in</a></p>
                 </div>
                 <div class="team-member">
-                    <img src="" alt="Vaibhav Katyal">
+                    <img src="katy.jpg" alt="Vaibhav Katyal">
                     <h3>Vaibhav Katyal</h3>
-                    <p>vaibhav0480.becse24@chitkara.edu.in</p>
+                    <p><a href="mailto:vaibhav0480.becse24@chitkara.edu.in">vaibhav0480.becse24@<br>chitkara.edu.in</a></p>
                 </div>
                 <div class="team-member">
-                    <img src="" alt="Aditya Sharma">
+                    <img src="aditya.jpg" alt="Aditya Sharma">
                     <h3>Aditya Sharma</h3>
-                    <p>aditya0250.becse24@chitkara.edu.in</p>
+                    <p><a href="mailto:aditya0250.becse24@chitkara.edu.in">aditya0250.becse24@<br>chitkara.edu.in</a></p>
                 </div>
                 <div class="team-member">
-                    <img src="" alt="Lakshya Chauhan">
+                    <img src="lakshya.jpg" alt="Lakshya Chauhan">
                     <h3>Lakshya Chauhan</h3>
-                    <p>lakshya0523.becse24@chitkara.edu.in</p>
+                    <p><a href="mailto:lakshya0523.becse24@chitkara.edu.in">lakshya0523.becse24@<br>chitkara.edu.in</a></p>
                 </div>
             </div>
         </section>
@@ -58,5 +60,5 @@
         <p>&copy; © EduSphere. All rights reserved.</p>
     </footer>
 </body>
-</html>
 
+</html>
