added files chatbot

--- a/chat.html
+++ b/chat.html
@@ -9,7 +9,7 @@
             font-family: 'Segoe UI', system-ui, sans-serif;
             margin: 0;
             padding: 0;
-            background: transparent;
+            background: white;
             display: flex;
             justify-content: center;
             align-items: center;
