--- a/chat.html
+++ b/chat.html
@@ -40,7 +40,7 @@
             right: 20px;
             width: 300px;
             height: 400px;
-            background: white;
+            background: transparent;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             display: none;
