changed main file to index.html

--- a/library.html
+++ b/library.html
@@ -17,7 +17,7 @@
         <div class="title">EDUSPHERE</div>
         <div class="menu-toggle">☰</div>
         <ul>
-            <a href="landing.html"><li>Home</li></a>
+            <a href="index.html"><li>Home</li></a>
             <a href="groupPage.html"><li>Group Study</li></a>
             <a href="library.html"><li>Library</li></a>
             <a href="quiz.html"><li>Quiz</li></a>
