--- a/video-call-app/public/video-call.html
+++ b/video-call-app/public/video-call.html
@@ -210,7 +210,7 @@
         <div class="title">EDUSPHERE</div>
         <div class="menu-toggle">☰</div>
         <ul>
-            <a href="landing.html">
+            <a href="index.html">
                 <li>Home</li>
             </a>
             <a href="groupPage.html">
