--- a/sign.html
+++ b/sign.html
@@ -21,26 +21,26 @@
                 <form id="signin-form">
                     <div>
                         <label>Email</label>
-                        <input type="email" id="signin-email" class="text-input" placeholder="Enter email">
+                        <input type="email" id="signin-email" class="text-input" placeholder="Enter email" required>
                     </div>
                     <div>
                         <label>Password</label>
-                        <input type="password" id="signin-password" class="text-input" placeholder="Enter password">
+                        <input type="password" id="signin-password" class="text-input" placeholder="Enter password" required>
                     </div>
                     <button type="submit" class="primary-btn">Sign In</button>
                 </form>
                 <form id="signup-form" style="display: none;">
                     <div>
                         <label>Username</label>
-                        <input type="text" id="signup-username" class="text-input" placeholder="Enter username">
+                        <input type="text" id="signup-username" class="text-input" placeholder="Enter username" required>
                     </div>
                     <div>
                         <label>Email</label>
-                        <input type="email" id="signup-email" class="text-input" placeholder="Enter email">
+                        <input type="email" id="signup-email" class="text-input" placeholder="Enter email" required>
                     </div>
                     <div>
                         <label>Password</label>
-                        <input type="password" id="signup-password" class="text-input" placeholder="Enter password">
+                        <input type="password" id="signup-password" class="text-input" placeholder="Enter password" required>
                     </div>
                     <button type="submit" class="primary-btn">Sign Up</button>
                 </form>
