--- a/library.html
+++ b/library.html
@@ -15,7 +15,10 @@
 
     <nav class="navbar">
         <div class="title">EDUSPHERE</div>
-        <div class="menu-toggle">☰</div>
+        <div class="mobile-navbar-btn">
+            <ion-icon name="menu-outline" class="mobile-nav-icon menu-icon"></ion-icon>
+            <ion-icon name="close-outline" class="mobile-nav-icon close-icon"></ion-icon>
+        </div>
         <ul>
             <a href="index.html"><li>Home</li></a>
             <a href="groupPage.html"><li>Group Study</li></a>
@@ -73,6 +76,7 @@
 
     <script src="library.js"></script>
     <script src="navbar.js"></script>
+    <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
