--- a/navbar.html
+++ b/navbar.html
@@ -9,7 +9,10 @@
 <body>
     <nav class="navbar">
         <div class="title">EDUSPHERE</div>
-        <div class="menu-toggle">☰</div>
+        <div class="mobile-navbar-btn">
+            <ion-icon name="menu-outline" class="mobile-nav-icon menu-icon"></ion-icon>
+            <ion-icon name="close-outline" class="mobile-nav-icon close-icon"></ion-icon>
+        </div>
         <ul>
             <a href="landing.html"><li>Home</li></a>
             <a href="groupPage.html"><li>Group Study</li></a>
@@ -19,7 +22,25 @@
             <!-- <a href="sign.html"><li><button class="login-btn">Login</button></li></a> -->
         </ul>
     </nav>
+    <script>
+         const menuBtn = document.querySelector('.menu-icon');
+            const closeBtn = document.querySelector('.close-icon');
+            const navMenu = document.querySelector('.navbar ul');
 
+            menuBtn.addEventListener('click', () => {
+                navMenu.classList.add('show');
+                menuBtn.style.display = 'none';
+                closeBtn.style.display = 'block';
+            });
+
+            closeBtn.addEventListener('click', () => {
+                navMenu.classList.remove('show');
+                menuBtn.style.display = 'block';
+                closeBtn.style.display = 'none';
+            });
+        
+    </script>
     <script src="navbar.js"></script>
+    <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
