--- a/quiz.html
+++ b/quiz.html
@@ -12,7 +12,10 @@
 <body>
     <nav class="navbar">
         <div class="title">EDUSPHERE</div>
-        <div class="menu-toggle">☰</div>
+        <div class="mobile-navbar-btn">
+            <ion-icon name="menu-outline" class="mobile-nav-icon menu-icon"></ion-icon>
+            <ion-icon name="close-outline" class="mobile-nav-icon close-icon"></ion-icon>
+        </div>
         <ul>
             <a href="index.html"><li>Home</li></a>
             <a href="groupPage.html"><li>Group Study</li></a>
